# memory-map

./: .env.example  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  config.example.toml  deny.toml  hard_coded_values.md  justfile  memory-map.code-workspace  refactoring_plan.md  rustfmt.toml  scan_hardcoded.sh  todo.md  tombi.toml
.github/: dependabot.yml
.github/actions/free-runner-space/: action.yml
.github/workflows/: ci.yml  update-cargo-deps.yml  update-nixpkgs.yml
backend/: Cargo.toml  authz_model.conf  authz_policy.csv
backend/migrations/: V10__add_object_lifecycle_indexes.sql  V10__add_object_upload_sessions.sql  V11__add_available_objects_view.sql  V12__add_email_outbox.sql  V2__add_objects_table.sql  V3__add_users_table.sql  V4__add_password_reset_tokens_table.sql  V5__add_user_id_to_objects.sql  V6__add_publicity_settings.sql  V7__add_selected_users_publicity.sql  V8__add_object_storage_deletions.sql  V9__add_password_reset_token_created_at.sql
backend/src/: app.rs  constants.rs  email.rs  email_worker.rs  errors.rs  graphql.rs  lib.rs  main.rs  object_lifecycle.rs  outbox.rs  storage.rs  worker.rs
backend/src/controllers/: api.rs
backend/src/controllers/api/: locations.rs  s3_objects.rs
backend/src/db/: queries.rs
backend/src/graphql/: objects.rs
backend/src/graphql/objects/: config.rs  location.rs  s3_object.rs  s3object.rs  upload_session.rs  user.rs
backend/src/graphql/queries/: mutation.rs  query.rs
backend/src/object_lifecycle/: config.rs  deletion.rs  service.rs  worker.rs
backend/tests/: api_auth.rs  common.rs  storage.rs
devenv/: flake.nix
docs/: deployment.md
frontend/: Cargo.toml  README.md  Trunk.toml  config.example.json  index.html  package.json  playwright.config.js  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts
frontend/e2e/: fixtures.js  fixtures.ts  smoke.spec.js  smoke.spec.ts  workflow.spec.js  workflow.spec.ts
frontend/graphql/: abortObjectUpload.graphql  adminUpdateUser.graphql  changeEmail.graphql  changePassword.graphql  completeObjectUpload.graphql  config.graphql  createObjectUploadSession.graphql  deleteS3Objects.graphql  login.graphql  logout.graphql  me.graphql  presignObjectUploadParts.graphql  register.graphql  requestPasswordReset.graphql  resetPassword.graphql  s3ObjectById.graphql  s3Objects.graphql  schema.json  updateS3Object.graphql  updateUserPublicity.graphql  upsertS3Object.graphql  users.graphql
frontend/public/: config.json  styles.scss  uno.css
frontend/scripts/: generate-graphql-schema.nu
frontend/src/: auth.rs  components.rs  constants.rs  errors.rs  graphql_queries.rs  lib.rs  main.rs  pages.rs
frontend/src/components/: carousel.rs  counter_btn.rs  edit_s3_object_form.rs  file_upload.rs  full_size_s3_object.rs  gallery.rs  header.rs  location_marker.rs  location_markers.rs  mod.rs  password_input.rs  protected_route.rs  s3_object.rs  s3_object_table_row.rs  s3_object_table_rows.rs  s3_objects_table.rs
frontend/src/graphql_queries/: abort_object_upload.rs  admin_update_user.rs  change_email.rs  change_password.rs  complete_object_upload.rs  config.rs  create_object_upload_session.rs  delete_s3_objects.rs  login.rs  logout.rs  me.rs  presign_object_upload_parts.rs  register.rs  request_password_reset.rs  reset_password.rs  s3_object_by_id.rs  s3_objects.rs  types.rs  update_s3_object.rs  update_user_publicity.rs  upsert_s3_object.rs  users.rs
frontend/src/pages/: account.rs  admin.rs  edit_s3_object.rs  forbidden.rs  home.rs  mod.rs  not_found.rs  objects.rs  register.rs  reset_password.rs  sign_in.rs
frontend/src/pages/admin/: users.rs
frontend/style/: main.scss  uno.css
memory-map-backend/: Cargo.toml
memory-map-backend/migrations/: V2__add_locations_table.sql  V3__add_objects_table.sql
memory-map-backend/src/: graphql.rs  lib copy.rs  lib.rs  main.rs
memory-map-backend/src/graphql/: objects.rs
memory-map-backend/src/graphql/objects/: location.rs  s3object.rs
memory-map-backend/src/graphql/queries/: mutation.rs  query.rs
memory-map-frontend/: Cargo.toml
memory-map-frontend/memory-map-frontend/: Cargo.toml
memory-map-frontend/src/: main.rs
mind-map-backend/: Cargo.toml
mind-map-backend/src/: lib.rs  main.rs
scripts/: e2e-env.sh  scan_hardcoded.sh  service-graph.sh
shared/: Cargo.toml
shared/src/: lib.rs
