[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-graphql = "7.2"
async-graphql-axum = "7.2"
aws-credential-types = "1.2.14"
aws-sdk-s3 = { version = "1.133.0", default-features = false, features = [
	"default-https-client",
	"http-1x",
	"rt-tokio",
	"sigv4a"
] }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = [
	"cookie",
	"cookie-private",
	"cookie-signed"
] }
axum-macros = "0.5"
blake3 = "1.8"
casbin = { version = "2.20", features = ["logging", "runtime-tokio"] }
config = "0.15"
deadpool = "0.12"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1", "serde"] }
dotenvy = "0.15"
email_address = "0.2"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
jiff = "0.2"
lettre = { version = "0.11", features = [
	"builder",
	"tokio1",
	"tokio1-native-tls"
] }
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
postgres-types = { version = "0.2", features = ["derive"] }
rand = "0.10"
refinery = { version = "0.9", features = ["tokio-postgres"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.52", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-jiff-0_2"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
