[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
graphql_client = "0.14"
leptos = { version = "0.8", features = ["csr"] }
leptos-leaflet = { version = "0.10", features = [
  "csr",
] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
log = "0.4"
lucide-leptos = { version = "2", features = ["arrows", "notifications"] }
mime = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
shared = { path = "../shared" }
# @todo Bump this once out of beta.
thaw = { version = "0.5.0-beta", features = ["csr"] }
tokio = { version = "1.48", features = [
  "io-util",
  "macros",
  "rt",
  "sync",
  "time",
] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "MediaQueryList", "Window"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[dev-dependencies]
# Locked to =0.2.104 since that's the latest available on nixpkgs
wasm-bindgen = "=0.2.104"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "MediaQueryList", "Window"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
