[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
console_log = "1"
email_address = "0.2"
graphql_client = "0.16"
leptos = { version = "0.8", features = ["csr"] }
leptos-leaflet = { version = "0.10", features = [
	"csr",
] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
log = "0.4"
lucide-leptos = { version = "3", features = [
	"account",
	"arrows",
	"files",
	"layout",
	"multimedia",
	"notifications",
	"security",
	"text"
] }
mime = "0.3"
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
shared = { path = "../shared" }
# @todo Bump this once out of beta.
thaw = { version = "0.5.0-beta", features = ["csr"] }
thiserror = "2.0"
tokio = { version = "1.52", features = [
	"io-util",
	"macros",
	"rt",
	"sync",
	"time",
] }
# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
	"Headers",
	"MediaQueryList",
	"Request",
	"RequestCredentials",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window"
] }

[dev-dependencies]
# Locked to match wasm-bindgen-cli_0_2_118 from nixpkgs.
wasm-bindgen = "=0.2.118"
wasm-bindgen-test = "0.3"

[lints]
workspace = true
